--- a/articles/cognitive-services/translator-speech/index.yml
+++ b/articles/cognitive-services/translator-speech/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 879dd4e9b20a57257dd7b93fddb54168d6bceb33
-ms.sourcegitcommit: cc4fdd6f0f12b44c244abc7f6bc4b181a2d05302
+ms.openlocfilehash: ac2b928e73031adb77616161f844f3f7fabdf146
+ms.sourcegitcommit: 1aacea6bf8e31128c6d489fa6e614856cf89af19
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/25/2018
-ms.locfileid: "47095073"
+ms.lasthandoff: 10/16/2018
+ms.locfileid: "49339856"
 documentType: LandingData
 title: Dokumentation om Translator Speech API
 metadata:
@@ -21,8 +21,12 @@ metadata:
   ms.date: 3/5/2018
   ms.author: v-jansko
 abstract:
-  description: Microsoft Translator Speech API, som ingår i API-samlingen Microsoft Cognitive Services, är en molnbaserad maskinöversättningstjänst med tal till tal- och tal till text-översättning. Tjänsten är baserad på REST-teknik (branschstandard) och kan användas för att lägga till talöversättning, heltäckande och i realtid, till program, verktyg och lösningar som kräver talöversättning på flera språk oberoende av måloperativsystem och utvecklingsspråk. Listan med språk som stöds finns i <a href="languages.md">Språk som stöds</a>.
+  description: Microsoft Translator Speech API, som ingår i API-samlingen Microsoft Cognitive Services, är en molnbaserad maskinöversättningstjänst med tal till tal- och tal till text-översättning. Tjänsten är baserad på REST-teknik (branschstandard) och kan användas för att lägga till talöversättning, heltäckande och i realtid, till program, verktyg och lösningar som kräver talöversättning på flera språk oberoende av måloperativsystem och utvecklingsspråk. En lista över språk som stöds finns i artikeln <a href="languages.md">Språk som stöds</a>.
 sections:
+- title: 
+  items:
+  - type: paragraph
+    text: '<b>Obs!: Nya Speech Service och SDK:n ersätter Translator Speech API som slutar att fungera den 15 oktober 2019. Mer information om hur du växlar till Speech Service finns i <a href="https://docs.microsoft.com/azure/cognitive-services/speech-service/how-to-migrate-from-translator-speech-api">Migrating from the Translator Speech API to the Speech Service</a></b> (Migrera från Translator Speech API till Speech Service)'
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
