--- a/articles/iot-fundamentals/toc.yml
+++ b/articles/iot-fundamentals/toc.yml
@@ -1,42 +1,51 @@
+items:
 - name: Grunderna i Azure IoT
   href: index.yml
 - name: Översikt
   items:
-    - name: Introduktion
-      href: iot-introduction.md
-    - name: Azure IoT-tjänster och tekniker
-      href: iot-services-and-technologies.md
+  - name: Introduktion
+    href: iot-introduction.md
+  - name: Azure IoT-tjänster och tekniker
+    href: iot-services-and-technologies.md
 - name: Lösningar
   items:
-    - name: IoT-lösningsacceleratorer
-      href: /azure/iot-suite
-    - name: IoT Central
-      href: 'https://docs.microsoft.com/microsoft-iot-central/'
+  - name: IoT-lösningsacceleratorer
+    href: /azure/iot-suite
+  - name: IoT Central
+    href: https://docs.microsoft.com/microsoft-iot-central/
 - name: Plattformstjänster
   items:
-    - name: IoT Hub
-      href: /azure/iot-hub
-    - name: IoT Hub Device Provisioning Service
-      href: /azure/iot-dps
-    - name: Azure Maps
-      href: /azure/azure-maps
-    - name: 'Tjänst-SDK:er'
-      href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks'
-    - name: Time Series Insights
-      href: /azure/time-series-insights
+  - name: IoT Hub
+    href: /azure/iot-hub
+  - name: IoT Hub Device Provisioning Service
+    href: /azure/iot-dps
+  - name: Azure Digital Twins
+    href: /azure/digital-twins
+  - name: Azure Maps
+    href: /azure/azure-maps
+  - name: Time Series Insights
+    href: /azure/time-series-insights
+  - name: Tjänst-SDK:er
+    href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-service-sdks
 - name: Edge
   items:
-    - name: IoT Edge
-      href: /azure/iot-edge
-    - name: 'SDK:er för IoT-enheter'
-      href: '/azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks'
+  - name: IoT Edge
+    href: /azure/iot-edge
+  - name: SDK:er för IoT-enheter
+    href: /azure/iot-hub/iot-hub-devguide-sdks#azure-iot-device-sdks
 - name: Säkerhet
   items:
-    - name: Säkerhetsarkitektur
-      href: iot-security-architecture.md
-    - name: Metodtips för säkerhet
-      href: iot-security-best-practices.md
-    - name: Säker distribution
-      href: iot-security-deployment.md
-    - name: Säkerhet från grunden
-      href: iot-security-ground-up.md
+  - name: Säkerhetsarkitektur
+    href: iot-security-architecture.md
+  - name: Metodtips för säkerhet
+    href: iot-security-best-practices.md
+  - name: Säker distribution
+    href: iot-security-deployment.md
+  - name: Säkerhet från grunden
+    href: iot-security-ground-up.md
+ms.openlocfilehash: df43416b0d1e72e152a2917846ba0407c861421b
+ms.sourcegitcommit: 74941e0d60dbfd5ab44395e1867b2171c4944dbe
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 10/15/2018
+ms.locfileid: "49321383"
