--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Om Security Center
     href: security-center-intro.md
+  - name: Plattformar och funktioner som stöds av Security Center
+    href: security-center-os-coverage.md
 - name: Snabbstarter
   items:
   - name: Azure-prenumerationer
@@ -117,10 +119,10 @@ items:
         href: security-center-enable-transparent-data-encryption.md
     - name: Övervaka identitet och åtkomst
       href: security-center-identity-access.md
-    - name: Hantera Just-in-time-åtkomst
-      href: security-center-just-in-time.md
   - name: Tillämpa molnskydd
     items:
+    - name: Hantera Just-in-time-åtkomst
+      href: security-center-just-in-time.md
     - name: Anpassningsbara programkontroller
       href: security-center-adaptive-application.md
     - name: Övervakning av filintegritet
@@ -203,8 +205,6 @@ items:
     href: security-center-privacy.md
   - name: VANLIGA FRÅGOR OCH SVAR
     href: security-center-faq.md
-  - name: Plattformar som stöds
-    href: security-center-os-coverage.md
   - name: Planering och drift
     href: security-center-planning-and-operations-guide.md
   - name: Säkerhet i Azure
@@ -225,9 +225,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=security-center
   - name: Regional tillgänglighet
     href: https://azure.microsoft.com/regions/services/
-ms.openlocfilehash: 77742b337a109bb1d9f81a16c9b614268859f35e
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.openlocfilehash: 60bb35519dec1dc08dd9ed82633c594c56fdd893
+ms.sourcegitcommit: 74941e0d60dbfd5ab44395e1867b2171c4944dbe
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47041871"
+ms.lasthandoff: 10/15/2018
+ms.locfileid: "49318086"
