--- a/articles/stream-analytics/TOC.yml
+++ b/articles/stream-analytics/TOC.yml
@@ -147,18 +147,14 @@ items:
       href: stream-analytics-edge-csharp-udf-methods.md
   - name: Felsöka
     items:
-    - name: Felsökningsanvisningar
-      href: stream-analytics-troubleshooting-guide.md
-    - name: Vanliga problem
-      href: stream-analytics-common-troubleshooting-issues.md
-    - name: Jobbdiagram
-      href: stream-analytics-job-diagram-with-metrics.md
+    - name: Inkommande anslutningar
+      href: stream-analytics-troubleshoot-input.md
+    - name: Utgående anslutningar
+      href: stream-analytics-troubleshoot-output.md
+    - name: Frågelogik
+      href: stream-analytics-troubleshoot-query.md
     - name: Diagnostikloggar
       href: stream-analytics-job-diagnostic-logs.md
-    - name: SELECT INTO-instruktion
-      href: stream-analytics-select-into.md
-    - name: Händelsehubbmottagare
-      href: stream-analytics-event-hub-consumer-groups.md
   - name: Integrera med Machine Learning
     items:
     - name: Attitydanalys med maskininlärningsmodeller
@@ -167,6 +163,8 @@ items:
       href: stream-analytics-machine-learning-anomaly-detection.md
     - name: Använda REST-API:er
       href: stream-analytics-how-to-configure-azure-machine-learning-endpoints-in-stream-analytics.md
+  - name: Felsöka med hjälp av jobbdiagram
+    href: stream-analytics-job-diagram-with-metrics.md
 - name: Referens
   items:
   - name: Azure PowerShell
@@ -203,9 +201,9 @@ items:
     href: https://azure.microsoft.com/case-studies/?service=stream-analytics
   - name: Whitepaper-datablad – händelsebearbetning i realtid
     href: stream-analytics-real-time-event-processing-reference-architecture.md
-ms.openlocfilehash: 85e4a1bdc05f48a842a183bfa6db80d0bd3f946f
-ms.sourcegitcommit: 67abaa44871ab98770b22b29d899ff2f396bdae3
+ms.openlocfilehash: f032292835e01b86fdc9ca0b8a3dd00f8a45cd29
+ms.sourcegitcommit: 1aacea6bf8e31128c6d489fa6e614856cf89af19
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/08/2018
-ms.locfileid: "48854770"
+ms.lasthandoff: 10/16/2018
+ms.locfileid: "49340876"
