--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -26,6 +26,10 @@ items:
     href: azure-stack-tutorial-tenant-vm.md
   - name: SQL-databas-erbjudande
     href: azure-stack-tutorial-sql-server.md
+  - name: Erbjud högtillgänglig SQL-databaser
+    href: azure-stack-tutorial-sql.md
+  - name: Erbjud MyQL-databaser med hög tillgänglighet
+    href: azure-stack-tutorial-mysql.md
   - name: Web Apps-erbjudande
     href: azure-stack-tutorial-app-service.md
   - name: Distribuera Ethereum
@@ -380,9 +384,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 7bb089d4a10f6c30318befc5ccca71ac5bdb9017
-ms.sourcegitcommit: 609c85e433150e7c27abd3b373d56ee9cf95179a
+ms.openlocfilehash: 6fc6652110dbc8b459e7961632b3b6e654773a5c
+ms.sourcegitcommit: 6361a3d20ac1b902d22119b640909c3a002185b3
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/03/2018
-ms.locfileid: "48249561"
+ms.lasthandoff: 10/17/2018
+ms.locfileid: "49362508"
