--- a/articles/iot-hub/index.yml
+++ b/articles/iot-hub/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 2f6ca80985d73c0bfe0fd248b697b57ebb5796a2
-ms.sourcegitcommit: 1981c65544e642958917a5ffa2b09d6b7345475d
+ms.openlocfilehash: ec18a5834ce88d5872ae9044d7896012523e2288
+ms.sourcegitcommit: f6050791e910c22bd3c749c6d0f09b1ba8fccf0c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/03/2018
-ms.locfileid: "48237967"
+ms.lasthandoff: 10/25/2018
+ms.locfileid: "50024060"
 documentType: LandingData
 title: Dokumentation om IoT Hub
 metadata:
@@ -70,6 +70,6 @@ sections:
     - title: Kommandorad
       html: <p><a href="/cli/azure/iot">Azure CLI</a></p>
     - title: Språk
-      html: <p><a href="/dotnet/api/microsoft.azure.devices">.NET (tjänst)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (enheter)</a></p><p><a href="https://azure.github.io/azure-iot-sdk-c/index.html">C (enhets-SDK)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (tjänst)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (enheter)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (tjänst)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (enheter)</a></p>
+      html: <p><a href="/dotnet/api/microsoft.azure.devices">.NET (tjänst)</a></p><p><a href="/dotnet/api/microsoft.azure.devices.client">.NET (enheter)</a></p><p><a href="https://docs.microsoft.com/azure/iot-hub/iot-c-sdk-ref/">C (enhets-SDK)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.service">Java (tjänst)</a></p><p><a href="/java/api/com.microsoft.azure.sdk.iot.device">Java (enheter)</a></p><p><a href="/javascript/api/azure-iothub/?view=azure-iot-typescript-latest">Node.js (tjänst)</a></p><p><a href="/javascript/api/azure-iot-device/?view=azure-iot-typescript-latest">Node.js (enheter)</a></p>
     - title: REST
       html: <p><a href="/rest/api/iothub/device">REST (enhet)</a></p><p><a href="/rest/api/iothub/service">REST (tjänst)</a></p><p><a href="/rest/api/iothub/iothubresource">REST (IoT Hub-resurs)</a></p><p><a href="/rest/api/iothub/certificates">REST (certifikat)</a></p>
