--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -19,6 +19,16 @@ items:
         href: quickstart-v1-update-azure-ad-app.md
       - name: Ta bort en objekt
         href: quickstart-v1-remove-azure-ad-app.md
+      - name: Registrera en app (förhandsversion)
+        href: quickstart-register-app.md
+      - name: Konfigurera en app för att få åtkomst till webb-API:er (förhandsversion)
+        href: quickstart-configure-app-access-web-apis.md
+      - name: Konfigurera en app för att exponera webb-API:er (förhandsversion)
+        href: quickstart-configure-app-expose-web-apis.md
+      - name: Ändra konton som stöds av en app (förhandsversion)
+        href: quickstart-modify-supported-accounts.md
+      - name: Ta bort en app (förhandsversion)
+        href: quickstart-remove-app.md
     - name: Enkelsidiga appar
       items:
       - name: AngularJS
@@ -233,6 +243,16 @@ items:
         href: quickstart-v1-update-azure-ad-app.md
       - name: Ta bort en objekt
         href: quickstart-v1-remove-azure-ad-app.md
+      - name: Registrera en app (förhandsversion)
+        href: quickstart-register-app.md
+      - name: Konfigurera en app för att få åtkomst till webb-API:er (förhandsversion)
+        href: quickstart-configure-app-access-web-apis.md
+      - name: Konfigurera en app för att exponera webb-API:er (förhandsversion)
+        href: quickstart-configure-app-expose-web-apis.md
+      - name: Ändra konton som stöds av en app (förhandsversion)
+        href: quickstart-modify-supported-accounts.md
+      - name: Ta bort en app (förhandsversion)
+        href: quickstart-remove-app.md
     - name: Enkelsidiga appar
       items:
       - name: JavaScript
@@ -408,9 +428,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterade identiteter för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: 01775498610b76b9110f26e3f45e41d0baadd486
-ms.sourcegitcommit: 5c00e98c0d825f7005cb0f07d62052aff0bc0ca8
+ms.openlocfilehash: 8d37b5b977509b61d31f7ed29571762325188f33
+ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 10/24/2018
-ms.locfileid: "49957429"
+ms.locfileid: "49987831"
