--- a/articles/event-hubs/TOC.yml
+++ b/articles/event-hubs/TOC.yml
@@ -95,13 +95,13 @@ items:
     href: event-hubs-authentication-and-security-model-overview.md
   - name: Tillgänglighet och konsekvens
     href: event-hubs-availability-and-consistency.md
-  - name: Diagnostikloggar
-    href: event-hubs-diagnostic-logs.md
   - name: AMQP 1.0-protokollguide
     href: ../service-bus-messaging/service-bus-amqp-protocol-guide.md
     maintainContext: true
 - name: Instruktionsguider
   items:
+  - name: Konfigurera diagnostikloggar
+    href: event-hubs-diagnostic-logs.md
   - name: Event Hubs för Apache Kafka
     items:
     - name: Skapa Apache Kafka-aktiverade Event Hubs
@@ -174,9 +174,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-eventhub
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=event-hubs
-ms.openlocfilehash: a72f5b19d899160fdc9569cbd2b77eb50a30e8f7
-ms.sourcegitcommit: 668b486f3d07562b614de91451e50296be3c2e1f
+ms.openlocfilehash: 39d053a2bba16ba740075d029cda784577136449
+ms.sourcegitcommit: c2c279cb2cbc0bc268b38fbd900f1bac2fd0e88f
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 10/19/2018
-ms.locfileid: "49456364"
+ms.lasthandoff: 10/24/2018
+ms.locfileid: "49984952"
