--- a/articles/active-directory/devices/TOC.yml
+++ b/articles/active-directory/devices/TOC.yml
@@ -5,6 +5,8 @@ items:
   items:
   - name: Vad är enhetshantering i Azure AD?
     href: overview.md
+  - name: Vad är Enterprise State Roaming?
+    href: enterprise-state-roaming-overview.md
 - name: Självstudier
   items:
   - name: Konfigurera Azure AD-anslutningshybrid för hanterade domäner
@@ -30,13 +32,25 @@ items:
     href: hybrid-azuread-join-control.md
   - name: Tilldela lokala administratörer till Azure AD-anslutna enheter
     href: assign-local-admin.md
+  - name: Aktivera Enterprise State Roaming
+    href: enterprise-state-roaming-enable.md
   - name: Felsöka Azure AD-anslutningshybriden för aktuella Windows-enheter
     href: troubleshoot-hybrid-join-windows-current.md
   - name: Felsöka Azure AD-anslutningshybriden för äldre Windows-enheter
     href: troubleshoot-hybrid-join-windows-legacy.md
+  - name: Felsöka Enterprise State Roaming
+    href: enterprise-state-roaming-troubleshooting.md
   - name: Vanliga frågor och svar
     href: faq.md
+  - name: Aktivera vanliga frågor och svar om Enterprise State
+    href: enterprise-state-roaming-faqs.md
   expanded: true
+- name: Referens
+  items:
+  - name: GPO-inställningar för Enterprise State Roaming
+    href: enterprise-state-roaming-group-policy-settings.md
+  - name: Windows-inställningar för Enterprise State Roaming
+    href: enterprise-state-roaming-windows-settings-reference.md
 - name: Resurser
   items:
   - name: Azures feedbackforum
@@ -51,9 +65,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-active-directory
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory
-ms.openlocfilehash: b6d8a44707014535985ef781fd67978239112d63
-ms.sourcegitcommit: 4ecc62198f299fc215c49e38bca81f7eb62cdef3
+ms.openlocfilehash: aa3be36e660c1e0a68446166d3ec90a8a24fa3e8
+ms.sourcegitcommit: 9d7391e11d69af521a112ca886488caff5808ad6
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "47037907"
+ms.lasthandoff: 10/25/2018
+ms.locfileid: "50092329"
