--- a/articles/active-directory/manage-apps/index.yml
+++ b/articles/active-directory/manage-apps/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: ee1e311644052bb7c09b44fb55973bfa7c0a0c11
-ms.sourcegitcommit: 3150596c9d4a53d3650cc9254c107871ae0aab88
+ms.openlocfilehash: 534548185da45b750ac48c74a9ecf9e122a7042d
+ms.sourcegitcommit: 5de9de61a6ba33236caabb7d61bee69d57799142
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/28/2018
-ms.locfileid: "47419142"
+ms.lasthandoff: 10/25/2018
+ms.locfileid: "50084825"
 documentType: LandingData
 title: Dokumentation om programhantering
 metadata:
@@ -20,7 +20,16 @@ metadata:
   ms.date: 09/14/2018
   ms.author: barbkess
 abstract:
-  description: Lär dig hur du hanterar och distribuerar program med Azure Active Directory.
+  description: Azure Active Directory ger säker och smidig åtkomst till både molnprogram och lokala program. Och så behöver du inte hantera lösenord. Dina slutanvändare kan logga in en gång och få åtkomst till Office 365 och tusentals andra program. Lär dig att hantera och distribuera program med våra snabbstarter, våra självstudier och vår vägledning.
+  aside:
+    image:
+      alt: 
+      height: 110
+      src: media/index/video.png
+      width: 250
+    title: Säker åtkomst till dina program med Azure AD (1:47)
+    href: https://youtu.be/BSUuXXcJKCk/
+    width: 250
 sections:
 - title: Snabbstarter på 5 minuter
   items:
