--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -88,12 +88,15 @@ items:
     href: /python/api/overview/azure/key-vault?view=azure-python
   - name: REST
     href: /rest/api/keyvault
+    items:
+    - name: Autentisering, begäranden och svar
+      href: authentication-requests-and-responses.md
+    - name: Vanliga parametrar och sidhuvuden
+      href: common-parameters-and-headers.md
   - name: Utveckla
     items:
-    - name: Utvecklarguide för Key Vault
+    - name: Utvecklarguide
       href: key-vault-developers-guide.md
-    - name: Tjänstbegränsningar
-      href: key-vault-service-limits.md
     - name: HSM-skyddade nycklar
       href: key-vault-hsm-protected-keys.md
     - name: Migrera till .NET 2.0
@@ -118,25 +121,31 @@ items:
   items:
   - name: Utveckla dina färdigheter med Microsoft Learn
     href: /learn/browse/?products=azure-key-vault
-  - name: Tjänstöversikt
-    href: https://azure.microsoft.com/services/key-vault/
-  - name: Autentisering, begäranden och svar
-    href: authentication-requests-and-responses.md
-  - name: Vanliga parametrar och sidhuvuden
-    href: common-parameters-and-headers.md
   - name: Kundinformation
     href: key-vault-customer-data.md
-  - name: Blogg
+  - name: Tjänst
+    items:
+    - name: Prissättning
+      href: https://azure.microsoft.com/pricing/details/key-vault/
+    - name: Regional tillgänglighet
+      href: https://azure.microsoft.com/global-infrastructure/services/?products=key-vault
+    - name: Viktig information
+      href: key-vault-versions.md
+    - name: Serviceavtal (SLA)
+      href: https://azure.microsoft.com/support/legal/sla/key-vault/
+    - name: Tjänstbegränsningar
+      href: key-vault-service-limits.md
+    - name: Tjänststatus
+      href: https://azure.microsoft.com/status/
+    - name: Tjänstuppdateringar
+      href: https://azure.microsoft.com/updates/?product=key-vault
+  - name: Teamblogg
     href: http://blogs.technet.com/b/kv/
-  - name: Prissättning
-    href: https://azure.microsoft.com/pricing/details/key-vault/
-- name: Viktig information
-  href: key-vault-versions.md
 - name: Produktfeedback
   href: https://feedback.azure.com/forums/906355-azure-key-vault
-ms.openlocfilehash: 542c3ce29d4d663e4569829e4f551ab6f751db3b
-ms.sourcegitcommit: 32d218f5bd74f1cd106f4248115985df631d0a8c
+ms.openlocfilehash: 727a44d903d481974a95635f092468754085db1b
+ms.sourcegitcommit: 5de9de61a6ba33236caabb7d61bee69d57799142
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 09/24/2018
-ms.locfileid: "46953199"
+ms.lasthandoff: 10/25/2018
+ms.locfileid: "50084976"
